# rust-react

./: .gitignore  README.md
server/: Cargo.toml  README.md  Rocket.toml
server/migrations/2019-08-23-042419_create_users/: up.sql
server/migrations/2019-08-23-044136_create_books/: up.sql
server/src/: auth.rs  config.rs  errors.rs  lib.rs  main.rs  schema.rs
server/src/db/: mod.rs  user.rs
server/src/models/: book.rs  mod.rs  user.rs
server/src/routes/: users.rs
