[package]
name = "server"
version = "0.1.0"
authors = ["seb7887 <segurasebastian7887@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.2"
diesel = { version = "1.4.2", features = ["postgres", "chrono"]}
dotenv = "0.14.1"
serde = "1.0"
serde_json = "1.0"
frank_jwt = "3.1.1"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["diesel_postgres_pool", "json"]